LIST OF CHANGES

release 105.8.1 (2025-10-09)
 - CI updates

release 105.8.0 (2025-09-01)
 - Updated instrument image generation so that the rendered image for Elembio
   instruments is correct.
 - Updated Monitor::Elembio::RunParametersParser :
   - added run_name attribute,
   - changed the attribute type of both runparams_path and runfolder_path so
     that the existence of the relevant file or directory is performed,
   - added builder methods for runparams_path and runfolder_path attributes,
   - ensured that runfolder_path attribute is used when a path of the
     RunParameters.json file is needed.

release 105.7.0 (2025-08-18)
 - Isolate the RunParameters.json parser from the Monitor::Elembio::RunFolder
   into Monitor::Elembio::RunParametersParser
 - Refactor the elembio staging monitor to catch warnings from carp
 - Remove verbose option and List::MoreUtils unused import from
   the elembio staging monitor

release 105.6.1 (2025-08-12)
 - Bug fix - allow for registering old Elembio runs with no run type defined in RunParameters.json

release 105.6.0 (2025-08-06)
 - Registration of 'cytoprofiling' runs in tracking DB
 - Simplification of Elembio parser: simplified compute of actual cycle count,
   dropped POD for private methods and attributes, removed superfluous imports,
   dropped a separate package with constants, split long lines to fit 80 chars
   and dropped import of constants into a test.

release 105.5.1 (2025-07-22)
 - Bug fix in extraction of batch ID from the Elembio run name:
   allow for the run name being a number and a number prepended by 'B'.
 
release 105.5.0 (2025-07-16)
 - Add dry_run option format

release 105.4.0 (2025-06-20)
 - Functionality of the Elembio staging monitor is extended. Runs with status
   'archival pending' are moved to 'run archived'.
 - elembio_find_id_run script is added. Given Elembio run folder path where
   RunParameters.json file is, accesses the tracking database to find a run