@@ -9,13 +9,12 @@ extends 'DBIx::Class::ResultSet';
 our $VERSION = '0';
 
 sub find_with_attributes {
-  my ($self, $runfolder_name, $flowcell_id, $instrument_name) = @_;
+  my ($self, $flowcell_id, $instrument_name, $runfolder_name) = @_;
 
-  ($runfolder_name && $flowcell_id && $instrument_name) or croak
-    "One of runfolder name, flowcell ID or barcode or instrument name" .
-    " is undefined";
+  ($flowcell_id && $instrument_name) or croak
+    "One of flowcell ID (or barcode) or instrument name is undefined";
 
-  my $rs =   $self->result_source()->schema()->resultset('Instrument')
+  my $rs = $self->result_source()->schema()->resultset('Instrument')
     ->search( {'-or' => [name => $instrument_name,
                          external_name => $instrument_name]} );
   my $instrument_record = $rs->next();
@@ -26,16 +25,23 @@ sub find_with_attributes {
     croak "Multiple instrument records with name or external name $instrument_name";
   }
 
-  $rs = $self->search({
-                        'flowcell_id' => $flowcell_id,
-                        'folder_name' => $runfolder_name,
-                        'id_instrument' => $instrument_record->id_instrument
-                      });
+  my $query = {
+    'flowcell_id' => $flowcell_id,
+    'id_instrument' => $instrument_record->id_instrument
+  };
+  if ($runfolder_name) {
+    $query->{'folder_name'} = $runfolder_name;
+  }
+
+  $rs = $self->search($query);
   my $run_record = $rs->next();
   if ($run_record && $rs->next()) {
-    croak sprintf
-     "Multiple run records for run folder %s, flowcell %s and instrument %s",
-     $runfolder_name, $flowcell_id, $instrument_name;
+    my $error = sprintf 'Multiple run records for flowcell %s, instrument %s',
+      $flowcell_id, $instrument_name;
+    if ($runfolder_name) {
+      $error .= ", run folder $runfolder_name";
+    }
+    croak $error;
   } 
 
   return $run_record;
@@ -57,13 +63,19 @@ npg_tracking::Schema::ResultSet::Run
   my $instrument_name = 'AV244134';
   my $flowcell_id = '2427499508';
   my $run_row = $schema->resultset('Run')->find_with_attributes(
-    $run_folder_name, $flowcell_id, $instrument_name
+    $flowcell_id, $instrument_name, $run_folder_name
   );
   if (!$run_row) {
     print "Run with this attributes is not tracked\n";
   } else {
     print 'Found tracked run with ID ' . $run_row->id_run . "\n";
   }
+  
+  # When multiple run folder per run might be encounted, do not use
+  # the run folder argument:
+  $run_row = $schema->resultset('Run')->find_with_attributes(
+    $flowcell_id, $instrument_name
+  );
 
 =head1 DESCRIPTION
 
@@ -77,9 +89,25 @@ An extension for the ResultSet object for C<run> table.
 
 =head2 find_with_attributes
 
-Tries to find a run record using three attributes of a run, which are provided
-as three arguments, run folder name, flowcell identifier and instrument's
-name or external name.
+Run record finder for cases when C<id_run> attribute is not known.
+
+Up to the year 2025 a new run had been always created by a user via UI and
+only for Illumina sequencing runs. By the time any of NPG scripts were run,
+the run database record had existed and the run folder contained a record of
+C<id_run> as the C<ExperimentName>, which was assigned when the run was set up
+on the instrument. The name of the run folder never changed. Illumina sequencing
+experiments, which were set up outside of this convention (so called walk-up
+runs), were not tracked. Retrieving a run database record was always performed
+using C<id_run>, which is the primary key in the C<run> table.
+
+In 2025 NPG started to track sequencing runs performed on Element Biosciences
+and UltimaGen instruments. It was decided to detect new runs dynamically
+by looking at run folders on staging servers. This removes the overhead of a
+manual run creation and allows for registering and tracking all sequencing run.
+
+This method looks for a database run record using two or three attributes of
+a run, which should be provided in the following order: flowcell identifier,
+instrument's name or external name and, optionally, run folder name.
 
 The instrument name argument is validated by searching for an instrument record
 that has this value as either name or an external name. An error is raised if
@@ -87,7 +115,7 @@ either none or multiple instrument records are found.
 
 Returns a single C<npg_tracking::Schema::Result::Run> object if one run record
 is found. Returns an undefined value if no run records are found. Errors if
-multiple run records are found.
+multiple run records that satisfy given criteria are found.
 
 =head1 DEPENDENCIES
 
